--- a/html/search.html
+++ b/html/search.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html>
 <head>
-<title>Wahei</title>
+<title>Wahanthok</title>
 <link rel="stylesheet" href="../css/search.css">
 <link rel='icon' href='../images/favicon.png' type='image/png'>
 <style>
 	.zero {
 		background-image: url("{{.BackgroundImage}}");
-		//background-image: url("../images/default.jpg");
 	}
 </style>
 </head>
