Add footer info

--- a/html/search.html
+++ b/html/search.html
@@ -16,7 +16,7 @@
 	<div class="search">
 		<form id="search-form" method="GET" action="search">
 			<div class="text-box">
-				<input type="text" value="{{.W.Word}}" size="25" name="word" id="search-box">
+				<input type="text" value="{{.W.Word}}" size="22" name="word" id="search-box">
 			</div>
 			<div class="search-btn">
 				<button type="submit" name="search-btn" id="search-btn">Search</button>
@@ -38,7 +38,7 @@
 		</div>
 	</div>
 	<div class="footer">
-		<label>wahanthok is powered with <a href="http://golang.org">golang</a> by mubitosh</label>
+		<label>wahanthok is <a href="http://golang.org">golang</a> powered by mubitosh</label>
 	</div>
 </div>
 </div>
