Link mubitosh in the footer to about page of my github site

--- a/html/search.html
+++ b/html/search.html
@@ -38,7 +38,7 @@
 		</div>
 	</div>
 	<div class="footer">
-		<label><a href="https://github.com/mubitosh/wahanthok">wahanthok</a> is <a href="http://golang.org">golang</a> powered by <a href="https://mubitosh.github.io">mubitosh</a></label>
+		<label><a href="https://github.com/mubitosh/wahanthok">wahanthok</a> is <a href="http://golang.org">golang</a> powered by <a href="https://mubitosh.github.io/about/">mubitosh</a></label>
 	</div>
 </div>
 </div>
